<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">uberdust mobile client</string>
    <string name="RoomActivity_name">Rooms</string>
    <string name="room_label">Nodes</string>

    <string name="description_about">About</string>
    <string name="description_home">Home</string>
    <string name="description_search">Search</string>
    <string name="description_separator">Separator</string>
    <string name="description_feature1">Rooms</string>
    <string name="description_feature6">Preferences</string>

    <string name="title_about">About</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_rooms">Rooms</string>
    <string name="title_feature2">Commands</string>
    <string name="title_feature5">Users</string>
    <string name="title_preferences">Preferences</string>
    <string name="title_wizard">Wizard</string>
    
    <string name="demo">Coming Soon</string>
    <string name="title_nodes">Nodes</string>
    
    <string name="search_by">Search By:</string>
    <string name="HintSearch">Search by Room, Node, Capability</string>
    <string name="SearchResults">Results:</string>
    <string name="nikoloutsa">Nikoloutsakos Nikos</string>
    <string name="keramidas">Keramidas Bill</string>
    <string name="prevezan">Prevezanos John</string>
    

    <string name="firsttime_welcome">Welcome to uberdust mobile client</string>
    <string name="firsttime_description">No valid preferences were found.\nThat means it may be the first time you are running the application.\nTo start using the application you need to add a server.</string>
    <string name="firsttime_servername">Please add a name for the first server:</string>
    <string name="firsttime_serverurl">Please add the url for the first server:</string>
    <string name="firsttime_buttontext">Add server</string>
    
    <string name="serverpreferences_add">New server</string>
    <string name="serverpreferences_text">Available servers:\nLong click to edit</string>
    <string name="loading">Loading data</string>
    <string name="loading_please_wait">Please wait.</string>
    
    <string name="addserverdialog_name">Enter a name for the server</string>
    <string name="addserverdialog_url">Enter the server url</string>
    <string name="addserverdialog_ok">OK</string>
    <string name="addserverdialog_cancel">Cancel</string>
    <string name="browse">Browse</string>
    <string name="history">History</string>
    <string name="graph">Graph</string>
    <string name="command">Command</string>
    <string name="keramidas-email">keramidasceid@gmail.com</string>
    <string name="nikoloutsa-email"/>
    <string name="prevezan-email"/>
</resources>