<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
    <LinearLayout style="@style/TitleBar">
        <ImageView style="@style/TitleBarLogo"
            android:src="@drawable/title_logo" />
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp">
    </View>
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:drawableLeft="@drawable/icon"
        android:text="@string/firsttime_welcome" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp">
    </View>
    <TextView  
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content" 
    	android:paddingLeft="10dp"
    	android:paddingRight="10dp"
    	android:text="@string/firsttime_description"
    />
    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp">
    </View>
    <TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/firsttime_servername"
    />
    <EditText
        android:id="@+id/firsttime_servername"
        android:inputType="text"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"         
        />
    <TextView  
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content" 
    	android:text="@string/firsttime_serverurl"
    />
    <EditText
        android:id="@+id/firsttime_serverurl"
        android:inputType="textUri"
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"         
        />
    <Button
        android:id="@+id/firsttime_serverbutton"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickOk"
        android:text="@string/firsttime_buttontext" />
</LinearLayout>